log
Wed 22 Mar 2023 09:15:52 PM UTC: 
 list.c | 50 ++++++++++++++++++++++++++++++++++----------------
 1 file changed, 34 insertions(+), 16 deletions(-)
 tests:  0|6
total_score: 0/70
9949fb1
Wed 22 Mar 2023 09:41:05 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:3: error: unknown type name ‘list’; did you mean ‘List’?
   36 |   list* list = (list*) malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:36:22: error: expected expression before ‘)’ token
   36 |   list* list = (list*) malloc(sizeof(list));
      |                      ^
list.c:37:7: error: request for member ‘head’ in something not a structure or union
   37 |   list->head = NULL;
      |       ^~
list.c:38:7: error: request for member ‘current’ in something not a structure or union
   38 |   list->current = NULL;
      |       ^~
Compilation failed
4f91b75
Wed 22 Mar 2023 09:41:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:31:10: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   31 |   return list;
      |          ^~~~
      |          List
list.c:31:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a581132
Wed 22 Mar 2023 09:42:16 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
825d4c5
Wed 22 Mar 2023 09:45:25 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
d645fce
Wed 22 Mar 2023 09:49:07 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   44 |   lista->current = lista->head;
      |   ^~~~~
      |   list
list.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9df850
Wed 22 Mar 2023 09:49:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   44 |   lista->current = lista->head;
      |   ^~~~~
      |   list
list.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0d7adb2
Wed 22 Mar 2023 09:50:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ffa03f6
Wed 22 Mar 2023 09:51:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a581d82
Wed 22 Mar 2023 09:52:12 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
95aacc2
Wed 22 Mar 2023 09:52:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
253b257
Wed 22 Mar 2023 09:53:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb28d90
Wed 22 Mar 2023 09:53:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
436f96f
Wed 22 Mar 2023 09:55:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f8558fa
Wed 22 Mar 2023 10:13:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0f08c6e
Wed 22 Mar 2023 10:15:48 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:23: error: ‘List’ {aka ‘struct List’} has no member named ‘netx’
   51 |   list->current = list->netx
      |                       ^~
list.c:51:29: error: expected ‘;’ before ‘return’
   51 |   list->current = list->netx
      |                             ^
      |                             ;
   52 |   return list->current->data;
      |   ~~~~~~                     
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ec6f7e
Wed 22 Mar 2023 10:16:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |   list->current = list->next
      |                       ^~
list.c:51:29: error: expected ‘;’ before ‘return’
   51 |   list->current = list->next
      |                             ^
      |                             ;
   52 |   return list->current->data;
      |   ~~~~~~                     
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
53be178
Wed 22 Mar 2023 10:17:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |   list->current = list->next;
      |                       ^~
Compilation failed
866d880
Wed 22 Mar 2023 10:17:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:7: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |   list->next = list->current;
      |       ^~
Compilation failed
a18a5fa
Wed 22 Mar 2023 10:17:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
984b41b
Wed 22 Mar 2023 10:38:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:14: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   52 |   return list->next->data;
      |              ^~
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b7a7dad
Wed 22 Mar 2023 10:39:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:14: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   52 |   return list->next;
      |              ^~
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7579ad6
Wed 22 Mar 2023 10:39:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5405ca4
Wed 22 Mar 2023 10:39:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:7: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |   list->next = list->current;
      |       ^~
Compilation failed
85e62d9
Wed 22 Mar 2023 10:40:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
38559cb
Thu 23 Mar 2023 03:25:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
83f034f
Thu 23 Mar 2023 03:26:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e20e08c
